[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/lobby_screen.gd" type="Script" id=1]
[ext_resource path="res://addons/LANServerBroadcast/server_advertiser/ServerAdvertiser.gd" type="Script" id=2]

[node name="VBoxContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PlayerList" type="ItemList" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Back" type="Button" parent="."]
margin_top = 580.0
margin_right = 1024.0
margin_bottom = 600.0
text = "Back"

[node name="ServerAdvertiser" type="Node" parent="."]
script = ExtResource( 2 )

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
